[package]
name = "mrsystem"
version = "0.1.0"
authors = ["Tom <1835601+darkstack@users.noreply.github.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sdl2 = { version = "0.34", features = ["static-link" , "bundled" ] }
coffee = { version = "0.4", features = ["opengl"] }
structopt = { version = "0.3", default-features = false }
